Refactor classes BinarySolution and BinaryProblem